--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
 
             const popupHtml =
               `<a href="${pt.link}" target="_blank" rel="noopener noreferrer">` +
-                `<div style="white-space: nowrap; font-size: clamp(14px, 2.8vw, 18px); font-weight: 900; overflow: hidden; text-overflow: ellipsis;">${pt.title}</div>` +
+                `<div style="font-weight: 900; font-family: Ubuntu, sans-serif; font-size: 18px; line-height: 1.2; display: block; width: 100%; white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">${pt.title}</div>` +
                 (pt.address ? `${pt.address}<br>` : '') +
                 `${zoneLines}<br>` +
                 (pt.gdpr ? '<em>Marked area is not exact.</em><br>' : '') +
@@ -168,15 +168,15 @@
 
             const el = document.createElement('div');
             el.innerHTML = `
-              <svg xmlns="http://www.w3.org/2000/svg" width="30" height="40" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="1.5">
+              <svg xmlns="http://www.w3.org/2000/svg" width="40" height="56" viewBox="0 0 24 24" fill="none" stroke="black" stroke-width="1">
                 <path d="M12 2C8 2 5 5.5 5 9.5c0 5.4 7 12.5 7 12.5s7-7.1 7-12.5C19 5.5 16 2 12 2z" fill="white"/>
                 <circle cx="12" cy="9.5" r="2.5" fill="black"/>
               </svg>
             `;
-            el.style.width = "30px";
-            el.style.height = "40px";
+            el.style.width = "40px";
+            el.style.height = "56px";
 
-            new mapboxgl.Marker(el)
+            new mapboxgl.Marker(el, { anchor: 'bottom' })
               .setLngLat(coords)
               .setPopup(new mapboxgl.Popup().setHTML(popupHtml))
               .addTo(map);
