--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>` : '') +
               `</a>`;
 
-            new mapboxgl.Marker({ color: '#8de9eb' })
+            new mapboxgl.Marker({ color: '#FCF5E3' })
               .setLngLat(coords)
               .setPopup(new mapboxgl.Popup().setHTML(popupHtml))
               .addTo(map);
