--- a/index.html
+++ b/index.html
@@ -77,10 +77,16 @@
       margin-top: 6px;
     }
 
-    /* Climate zone text with thin border */
-    .zone-text {
-      -webkit-text-stroke: 0.3px black;
-      text-shadow: 0 0 0.3px black;
+    /* Zone label chips */
+    .zone-chip {
+      line-height: 1.25;
+      border-radius: 3px;
+      padding: 0; /* default no padding if not bright */
+      display: inline-block;
+    }
+    .zone-chip.bright {
+      background: rgba(0,0,0,0.45); /* dark grey highlight */
+      padding: 0 3px;               /* minimal chip padding */
     }
 
     @media (max-width: 600px) {
@@ -111,6 +117,26 @@
   </div>
 
   <script>
+    // Perceived brightness (0..1) using ITU-R BT.601 luma approximation
+    function hexToRgb(hex) {
+      if (!hex) return null;
+      let c = hex.trim();
+      if (c[0] === '#') c = c.slice(1);
+      if (c.length === 3) c = c.split('').map(ch => ch + ch).join('');
+      if (c.length !== 6 || /[^0-9a-f]/i.test(c)) return null;
+      const num = parseInt(c, 16);
+      return { r: (num >> 16) & 255, g: (num >> 8) & 255, b: num & 255 };
+    }
+    function brightnessFromHex(hex) {
+      const rgb = hexToRgb(hex);
+      if (!rgb) return 0.5; // neutral fallback
+      const { r, g, b } = rgb;
+      // Perceived brightness 0..1
+      return ((r * 299) + (g * 587) + (b * 114)) / (255000);
+    }
+    // Threshold above which we add a dark-grey highlight
+    const BRIGHTNESS_THRESHOLD = 0.75;
+
     function createGeoJSONCircle(center, radiusKm, points = 64) {
       const lat = center[1], lon = center[0];
       const coords = [];
@@ -158,22 +184,26 @@
 
             let zoneLines = "";
             if (pt.zones && Array.isArray(pt.zones)) {
-              zoneLines = pt.zones.map(z => 
-                `<span class="zone-text" style="color:${z.colour};">${z.text}</span>`
-              ).join('<br>');
+              zoneLines = pt.zones.map(z => {
+                const bright = brightnessFromHex(z.colour) >= BRIGHTNESS_THRESHOLD;
+                const cls = bright ? 'zone-chip bright' : 'zone-chip';
+                return `<span class="${cls}" style="color:${z.colour};">${z.text}</span>`;
+              }).join('<br>');
             } else if (pt.zoneText && pt.zoneColour) {
-              zoneLines = `<span class="zone-text" style="color:${pt.zoneColour};">${pt.zoneText}</span>`;
+              const bright = brightnessFromHex(pt.zoneColour) >= BRIGHTNESS_THRESHOLD;
+              const cls = bright ? 'zone-chip bright' : 'zone-chip';
+              zoneLines = `<span class="${cls}" style="color:${pt.zoneColour};">${pt.zoneText}</span>`;
             }
 
             const popupHtml =
               `<a href="${pt.link}" target="_blank" rel="noopener noreferrer">` +
-              `<div style="font-weight: 700; font-family: Ubuntu, sans-serif; line-height: 1.3; text-align: center; font-size: 17px; margin-bottom: 4px;">${pt.title}</div>` +
+              `<div style="font-weight:700; font-family: Ubuntu, sans-serif; line-height:1.3; text-align:center; font-size:17px; margin-bottom:4px;">${pt.title}</div>` +
               (pt.address ? `${pt.address}<br>` : '') +
               `${zoneLines}<br>` +
               (pt.gdpr ? '<em>Marked area is not exact.</em><br>' : '') +
               (pt.imageUrl ? `
-                <div style="text-align: center;">
-                  <img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" style="display: block; margin: 0 auto;" />
+                <div style="text-align:center;">
+                  <img class="popup-image" src="${pt.imageUrl}" alt="${pt.title}" />
                 </div>` : '') +
               `</a>`;
 
